# calcit_wasmtime

./: Cargo.toml  README.md  build.sh  calcit.cirru  compact.cirru  deps.cirru
.github/workflows/: publish.yaml  test.yaml
examples/: try_api.rs
src/: lib.rs  s_expr.rs
tests/: syntax.rs
