[package]
name = "calcit_wasmtime"
version = "0.1.0"
edition = "2018"

[lib]
name = "calcit_wasmtime"
path = "src/lib.rs"
crate-type = ["rlib", "dylib"] # Creates dynamic lib

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cirru_parser = "0.1.29"
cirru_edn = "0.6.3"
wasmtime = { version = "20.0.1" , features = ['gc'] }
regex = "1.6"
lazy_static = "1.4.0"
