[package]
name = "calcit_wasmtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "calcit_wasmtime"
path = "src/lib.rs"
crate-type = ["rlib", "dylib"] # Creates dynamic lib

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cirru_parser = "0.1.31"
cirru_edn = "0.6.11"
wasmtime = { version = "26.0.1", features = ['gc'] }
regex = "1.11"
lazy_static = "1.5.0"
