[package]
name = "calcit_wasmtime"
version = "0.1.1"
edition = "2024"

[lib]
name = "calcit_wasmtime"
path = "src/lib.rs"
crate-type = ["rlib", "dylib"] # Creates dynamic lib

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cirru_parser = "0.2.4"
cirru_edn = "0.7.4"
wasmtime = { version = "26.0.1", features = ['gc'] }
regex = "1.11"
lazy_static = "1.5.0"
